--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tela de Instituição</title>
+    <title> Instituição</title>
     <link rel="stylesheet" href="style.css">
-    
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">        
 </head>
 <body>
-    <h1>Cadastrar Instituição</h1>
     <div>
-        <input type="nome" placeholder="Nome">
-        <input type="responsavel" placeholder="responsavel">
-        <input type="endereço" placeholder="endereço">
-        <input type="cep" placeholder="cep" >
-        <input type="nº" placeholder="nº">
-        <input type="telefone" placeholder="telefone">
-        <input type="e-mail" placeholder="e-mail">
-        <input type="senha" placeholder="senha">
+        <h1>Cadastrar Instituição</h1>
+        <input required type="nome" placeholder="  Nome">
+        <input required type="responsavel" placeholder="  Responsavel">
+        <input required type="endereço" placeholder="  Endereço">
+        <input required type="cep" placeholder="  Cep" >
+        <input required type="nº" placeholder="  Número">
+        <input required type="telefone" placeholder="  Telefone">
+        <input required type="e-mail" placeholder="  e-mail">
+        <input required type="password" placeholder="  Senha ">
+
 
         <button>cadastrar</button>
 
